<resources>
    <string name="app_name">Bro</string>
    <string name="choose_message">Choose message</string>
    <string name="confirm_messages">Confirm messages</string>
    <string name="settings">Settings</string>

    <!-- Tutorial -->
    <string name="tutorial">Tutorial</string>
    <string name="instructions">Simply click on your friends to \"Bro\" them.
        Include a link to the app in your messages to unlock new words.
        Use the buttons in the toolbar above to choose your message and control confirmation behavior.
        You can review this tutorial at any time from the settings page.
        Thank you for downloading this app and welcome to the Brovolution!</string>

    <!-- Friends -->
    <string name="link_spam">Include a link to this app in your messages.</string>
    <string name="search">Search Friends</string>
    <string name="confirm_message">Confirm Message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- History -->
    <string name="no_stories">No stories to display.</string>

    <!-- Broadcast keys -->
    <string name="bro_event_key">broEvent</string>
    <string name="record_key">record</string>

    <!-- Font Awesome icons -->
    <string name="x_icon">{fa-remove}</string>
    <string name="right_arrow_icon">{fa-angle-right}</string>

    <!-- Settings -->
    <string name="message_choices">Message Choices</string>
    <string name="choose">Choose</string>
    <string name="confirm_message_question">Confirm messages?</string>
    <string-array name="yes_no">
        <item>@string/yes</item>
        <item>@string/no</item>
    </string-array>
    <string name="now_confirming">The app will now show a confirmation dialog before sending messages.</string>
    <string name="not_confirming">The app will now automatically send messages.</string>

    <string name="story_options">Story Options</string>
    <string name="delete_story">Delete story</string>

    <!-- Permissions -->
    <string name="read_contacts_explanation">In order for this app to function, we need access to your contacts.</string>
    <string name="send_sms_explanation">
        For maximum Bro-ing efficiency,
        you need to allow us to send text messages on your behalf.
    </string>

    <string name="friends">Friends</string>
    <string name="history">History</string>
    <string-array name="tabs">
        <item>@string/friends</item>
        <item>@string/history</item>
    </string-array>

    <string name="please_rate">
        Hey, it looks like you\'re a frequent user of Bro!
        If you have a couple seconds, I would be incredibly grateful if you could rate this app in the Play Store.
        Don\'t worry, I won\'t bother you with this ever again no matter what you choose.
        Thank you again for even downloading this app to begin with.
    </string>
    <string name="will_rate">Sure, I\'ll help</string>
    <string name="decline_rating">No, I\'m good</string>
</resources>
