<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/choose_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <com.beardedhen.androidbootstrap.FontAwesomeText
            android:id="@+id/clear_input"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fontawesometext:fa_icon="@string/right_arrow_icon"
            android:textSize="18sp"/>

        <CheckBox
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/choose_message"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <View
        android:background="@color/app_blue"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="7dp">

        <CheckBox
            android:id="@+id/should_confirm"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/confirm_messages"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <View
        android:background="@color/app_blue"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>